--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ node_modules
 # VS Code workspaces save files
 *.code-workspace
 */.vscode/
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+env
