--- a/alumni-mob/package.json
+++ b/alumni-mob/package.json
@@ -27,6 +27,7 @@
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "class-transformer": "^0.5.1",
     "ionicons": "^7.0.0",
     "ngx-socket-io": "^4.7.0",
