--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -4,11 +4,18 @@ on:
   push:
     branches: [ "main" ]
 
+defaults:
+  run:
+    working-directory: ./gateway/
+
 jobs:
   build:
     # runner for the job
     runs-on: ubuntu-latest 
     steps:
+    # verify the current working directory
+    - name: pwd
+      run: pwd
     # get the code
     - name: checkout
       uses: actions/checkout@v4.1.7
