Update gateway.yml: working directory specified at npm install step

--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -28,3 +28,7 @@ jobs:
     # install the gateway's dependencies
     - name: npm install
       run: npm install
+      working-directory: ./gateway/
+    # verify the current working directory
+    - name: pwd and ls
+      run: pwd && ls -lhp
