--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -26,21 +26,23 @@ jobs:
     - name: npm install
       run: npm install
       working-directory: ./gateway/
-    # build the gateway code
-    - name: npm build
-      run: npm run build
-      working-directory:  ./gateway/
+    ## build the gateway code
+    #- name: npm build
+      #run: npm run build
+      #working-directory: ./gateway/
+    # run all the jest tests
+    - name: run all tests
+      run: npm run test
+      working-directory: ./gateway/
       
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    defaults:
-      run:
-        working-directory: ./gateway/
-    steps:
-      # verify the current working directory
-      - name: pwd and ls
-        run: pwd && ls -lhp
-      # run all the jest tests
-      - name: run all tests
-        run: npm run test
+  #test:
+    #runs-on: ubuntu-latest
+    #needs: build
+    #defaults:
+      #run:
+        #working-directory: ./gateway/
+    #steps:
+      ## verify the current working directory
+      #- name: pwd and ls
+        #run: pwd && ls -lhp
+      
