Update post.yml: split into 2 sequential jobs

--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -2,7 +2,7 @@ name: post micro-service CI/CD
 
 on:
   push:
-    # trigger this workflow after a new commit has been pushed on branch feature/authentication-jwt
+    # Trigger this workflow after a new commit has been pushed on branch feature/authentication-jwt
     branches: [ "feature/authentication-jwt" ]
 
 defaults:
@@ -10,20 +10,33 @@ defaults:
     working-directory: ./post/
 
 jobs:
-  unit-tests:
-    environment: dev
-    # runner for the job
+  build:
+    # Runner for the job
     runs-on: ubuntu-latest 
-    # Docker Hub image that `unit-tests` executes in
+    # Docker Hub image that the job executes in
     container: node:20
-
-    # Service containers to run with `unit-test`
+    steps:
+    # Get the code, as is on the branch feature/authentication-jwt
+    - name: Checkout the code
+      uses: actions/checkout@v4.1.7
+    - name: Install the post micro-service's dependencies
+      run: npm install
+    - name: Build the post micro-service
+      run: npm run build
+      
+  unit-tests:
+    # The build job must have finished successfuly before starting this job
+    needs: build
+    # GitHub environment (providing vars and secrets) to be used during the job
+    environment: dev
+    runs-on: ubuntu-latest
+    container: node:20
+    # Service containers to run with the job
     services:
         # Label used to access the service container
         post_database:
             # Docker Hub image
             image: mariadb:latest
-            #container_name: post_container
             ports:
                 - 3307:3306
             # Provide the credentials and other info for mariadb
@@ -34,25 +47,12 @@ jobs:
                 MARIADB_DATABASE: ${{ vars.POST_MARIADB_DATABASE }}
 
     steps:
-    # get the code, as is on the branch feature/authentication-jwt
-    - name: checkout
-      uses: actions/checkout@v4.1.7
-    # install the post micro-service's dependencies
-    - name: npm install
-      run: npm install
-    # run all the jest tests
-    - name: run all tests
-      run: npm run test
-      env:
-        INIT_DB_WITH_MOCK: ${{ vars.INIT_DB_WITH_MOCK }}
-      
-  #test:
-    #runs-on: ubuntu-latest
-    #needs: build
-    #defaults:
-      #run:
-        #working-directory: ./gateway/
-    #steps:
-      ## verify the current working directory
-      #- name: pwd and ls
-        #run: pwd && ls -lhp
+      # Get the code, as is on the branch feature/authentication-jwt
+      - name: Checkout the code
+        uses: actions/checkout@v4.1.7
+      - name: Install the post micro-service's dependencies
+        run: npm install
+      - name: Run all the jest tests for post
+        run: npm run test
+        env:
+          INIT_DB_WITH_MOCK: ${{ vars.INIT_DB_WITH_MOCK }}
